--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Mustache Enthusiast</title>
+	<title>Gallery - Mustache Enthusiast</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css" media="screen and (max-width : 568px)">
 	<script type="text/javascript" src="js/mobile.js"></script>
@@ -15,13 +15,13 @@
 			<img src="images/logo.jpg" alt="">
 		</a>
 		<ul id="navigation">
-			<li class="selected">
+			<li>
 				<a href="index.html">home</a>
 			</li>
 			<li>
 				<a href="about.html">about</a>
 			</li>
-			<li>
+			<li class="selected">
 				<a href="gallery.html">gallery</a>
 			</li>
 			<li>
@@ -33,35 +33,57 @@
 		</ul>
 	</div>
 	<div id="body">
-		<div id="featured">
-			<img src="images/the-beacon.jpg" alt="">
-			<div>
-				<h2>the beacon to all mankind</h2>
-				<span>Our website templates are created with</span>
-				<span>inspiration, checked for quality and originality</span>
-				<span>and meticulously sliced and coded.</span>
-				<a href="blog-single-post.html" class="more">read more</a>
-			</div>
-		</div>
-		<ul>
+		<h1><span>gallery</span></h1>
+		<ul class="gallery">
 			<li>
-				<a href="gallery.html">
-					<img src="images/the-father.jpg" alt="">
-					<span>the father</span>
-				</a>
-			</li>
-			<li>
-				<a href="gallery.html">
-					<iframe allowFullScreen='allowFullScreen' width="296" height="238"
-src="https://www.youtube.com/embed/IbZE43FISlA?autoplay=0">
+				<a href="gallery-single-post.html">
+					<iframe allowFullScreen='allowFullScreen' width="296" height="295"
+src="https://www.youtube.com/embed/Z7r-VRngrvA?autoplay=0">
 </iframe>
-					<span>the actor</span>
 				</a>
 			</li>
 			<li>
-				<a href="gallery.html">
-					<img src="images/the-nerd.jpg" alt="">
-					<span>the nerd</span>
+				<a href="gallery-single-post.html">
+					<iframe allowFullScreen='allowFullScreen' width="296" height="295"
+src="https://www.youtube.com/embed/yH8anaw7Lao?autoplay=0">
+</iframe>
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post.html">
+					<iframe allowFullScreen='allowFullScreen' width="296" height="295"
+src="https://www.youtube.com/embed/oNWo6cK-4pg?autoplay=0">
+</iframe>
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post.html">
+					<img src="images/mustache4.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post.html">
+					<img src="images/mustache5.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post.html">
+					<img src="images/mustache6.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post.html">
+					<img src="images/mustache7.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post.html">
+					<img src="images/mustache8.jpg" alt="">
+				</a>
+			</li>
+			<li>
+				<a href="gallery-single-post.html">
+					<img src="images/mustache9.jpg" alt="">
 				</a>
 			</li>
 		</ul>
